started mysqlconnector class

--- a/build.xml
+++ b/build.xml
@@ -19,7 +19,7 @@
 
 	<target name="build">
 		<mkdir dir="${classes.dir}" />
-		<javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="classpath" />
+		<javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="classpath" includeantruntime="false" />
 	</target>
 
 	<target name="jar" depends="build">
