--- a/build.xml
+++ b/build.xml
@@ -20,7 +20,7 @@
 
 	<target name="build">
 		<mkdir dir="${classes.dir}" />
-		<javac srcdir="${src.dir}" destdir="${classes.dir}" classpathref="classpath" includeantruntime="false" />
+		<javac srcdir="${src.dir}" destdir="${classes.dir}" debug="true" classpathref="classpath" includeantruntime="false" />
 	</target>
 
 	<target name="jar" depends="build">
